[metadata]
name = unum
version = 0.0.2
author = Mateus B. M. Pereira
author_email = mbmp@laccan.ufal.br
description = Unum toolchain for building serverless apps
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MateusBMP/unum
project_urls =
    Bug Tracker = https://github.com/MateusBMP/unum/issues
    Documentations = https://github.com/MateusBMP/unum/tree/main/docs
classifiers =
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

install_requires =
    cfn-flip
    coloredlogs
    PyGithub
    boto3

[options.packages.find]
where = .
